Updating test and minor refactoring